# eleborato_Gopalakrishnan

./: CMakeLists.txt  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  test_task.cpp  test_taskmanager.cpp
